# MovieRecomendation

./: README.md
data/: data_sample.csv
source/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addrowdialog.cpp  addrowdialog.h  addrowdialog.ui  customproxymodel_popularity.cpp  customproxymodel_popularity.h  customproxymodel_rating.cpp  customproxymodel_rating.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  table.cpp  table.h
